edit README.md file

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 <script>
     $(function(){
 
-       var tableHead = "<th>Date</th>"; //pref
-        //ix date label
+       var tableHead = "<th>Date</th>"; //prefix date label
         var tableRow = "";
         var count = 0;
         window.total = [];
